Fix username alignment (follow notifications & all types in desktop notifications)

--- a/Resources/Scripts/styles/browser.css
+++ b/Resources/Scripts/styles/browser.css
@@ -168,6 +168,11 @@ a[data-full-url] {
   vertical-align: 10% !important;
 }
 
+.account-inline .position-rel + .username {
+  /* except for follow notifications because consistency eh */
+  vertical-align: -10% !important;
+}
+
 html[data-td-font='smallest'] .sprite-verified-mini {
   /* fix cut off badge when zoomed in */
   width: 13px !important;
