--- a/Resources/Scripts/styles/notification.css
+++ b/Resources/Scripts/styles/notification.css
@@ -20,6 +20,16 @@ body {
   border-left: 0 !important;
 }
 
+/* Usernames */
+
+.account-inline .username {
+  vertical-align: 10% !important;
+}
+
+.account-inline .position-rel + .username {
+  vertical-align: -10% !important;
+}
+
 /* Media */
 
 .media-size-medium {
